// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinderItem Drag & drop should match snapshot if dragEnabled is \`true\` 1`] = `
<div class="item draggable" role="button" draggable="true">
  <!--v-if-->
  <!--v-if-->
  <div class="inner-item" item="[object Object]"></div>
  <div class="arrow"></div>
</div>
<!--teleport start-->
<!--teleport end-->
`;

exports[`FinderItem Expand should match snapshot if expanded 1`] = `
<div class="item expanded" role="button" draggable="false" aria-expanded="true">
  <!--v-if-->
  <!--v-if-->
  <div class="inner-item" item="[object Object]" expanded="true"></div>
  <div class="arrow"></div>
</div>
<!--teleport start-->
<!--teleport end-->
`;

exports[`FinderItem Selection should match snapshot if selectable 1`] = `
<div class="item" role="button" draggable="false">
  <!--v-if--><input type="checkbox">
  <div class="inner-item" item="[object Object]"></div>
  <div class="arrow"></div>
</div>
<!--teleport start-->
<!--teleport end-->
`;

exports[`FinderItem should match snapshot 1`] = `
<div class="item" role="button" draggable="false">
  <!--v-if-->
  <!--v-if-->
  <div class="inner-item" item="[object Object]"></div>
  <div class="arrow"></div>
</div>
<!--teleport start-->
<!--teleport end-->
`;
